--- a/next_approach/.stylelintrc.json
+++ b/next_approach/.stylelintrc.json
@@ -1,16 +1,8 @@
 {
+  "extends": [
+    "stylelint-config-tailwindcss"
+  ],
   "rules": {
-    "at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": [
-          "tailwind",
-          "apply",
-          "variants",
-          "responsive",
-          "screen"
-        ]
-      }
-    ]
+    "at-rule-no-unknown": null
   }
 }
