--- a/next_approach/package.json
+++ b/next_approach/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+      "lint:css": "stylelint '**/*.css'"
   },
   "dependencies": {
     "next": "16.1.1",
@@ -19,6 +20,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "postcss": "^8.5.6",
+    "stylelint": "^16.26.1",
     "tailwindcss": "^4.1.18"
   }
 }
